<resources>
    <string name="app_name">Chat app</string>
    <string name="action_settings">Settings</string>

    <string name="login">Login</string>
    <string name="logout">Log out</string>
    <string name="signup">Sign up</string>
    <string name="send">send</string>

    <string name="username">User name</string>
    <string name="password">Password</string>
    <string name="error">Value is incorrect</string>
    <string name="compose">Start a new message</string>
    <string name="loading">Loading</string>

    <string name="terms">By signing up, you agree to the Terms of Service and Privacy Policy, including Cookie Use. Others will be able to find you by searching for your email address or phone number when provided.</string>

</resources>
